--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,16 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.7</version>
+        <version>2.7.0</version>
         <relativePath/>
     </parent>
     <groupId>com.drfeederino</groupId>
     <artifactId>telegram-stateless-checker</artifactId>
-    <version>1.1.0</version>
-    <name>telegram-stateless-checker</name>
+    <version>1.2.0</version>
+    <name>application-tracking-bot</name>
     <description>Bot for checking application status on iData.</description>
     <properties>
-        <java.version>11</java.version>
+        <java.version>17</java.version>
         <selenium.version>4.1.4</selenium.version>
     </properties>
 
@@ -67,6 +67,9 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <finalName>application-tracking</finalName>
+                    <!--Just for convenience’s sake-->
+                    <outputDirectory>docker/app/</outputDirectory>
                 </configuration>
             </plugin>
 
